tests/type-errors/no_side_effect_in_function3.arl
archetype no_side_effect_in_function3

function f (a : address) : nat {
  if true
  then fail ("error");
  return 1
}

entry exec () {
  ()
}
